--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -47,7 +47,7 @@ const pageTitle = "Om Meg";
         </div>
         <figure class="about-portrait">
             <img
-                src="/images/headshot.jpg"
+                src="/images/headshot.png"
                 alt="Portrett av Truls"
                 loading="lazy"
             />
