mail og mer fiksing!

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,7 +40,7 @@ const pageTitle = "Om Meg";
                 ting jeg har lyst til å lage og dele, små prosjekter, tanker,
                 formidlingsforsøk og annet jeg synes er gøy. Hvis noe her
                 treffer deg, faglig eller menneskelig,
-                <a class="inline-link" href="mailto:mail@truls.dev"
+                <a class="inline-link" href="mailto:post@truls.dev"
                     >send meg gjerne en e-post</a
                 >. Jeg sier sjelden nei til en god prat.
             </p>
