--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const pageTitle = "Om Meg";
+const pageTitle = "Om meg";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
