--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,7 +125,7 @@ const galleryItems: GalleryItem[] = imageNames.map((x) => {
     <section class="section" id="talks">
         <div class="stack reveal">
             <h2>Videoer og foredrag</h2>
-            <p class="muted">Et lite utvalg av opptak.</p>
+            <!-- <p class="muted">Et lite utvalg av opptak.</p> -->
         </div>
         <ul class="list">
             {
